--- a/.env
+++ b/.env
@@ -1,8 +1,11 @@
 PORT=8089
 TIMEOUT=10000
 
-URL_EDO=http://backend.smufreight.com:8092
-URL_JO=http://backend.smufreight.com:8090
+URL_EDO=http://localhost/edo/
+URL_JO=http://localhost:8000/
+#URL_EDO=https://dev-edo.herokuapp.com/
+#URL_JO=https://dev-kairos.herokuapp.com/
 # URL_JO=http://localhost:8000
 JWT_SECRET=KairosSCLEDO
 JWT_ACCESS_TOKEN_EXPIRED=5h
+
